<resources>
    <string name="app_name">Quizachu</string>

    <!-- Menú de login i registre -->
    <string name="botoLogin">Login</string> <!-- Boton de login -->
    <string name="botoRegistre">Registre</string> <!-- Boton de registro -->

    <!-- Login -->
    <string name="correo">E-mail</string> <!-- Correo  -->
    <string name="nombre">Nom</string> <!-- Nombre -->
    <string name="pass">Password</string> <!-- Contraseña -->
    <string name="fecha">Data</string> <!-- Fecha -->
    <string name="Registrar">REGISTRAR</string> <!-- Registro -->
    <string name="cambiaPassword">¿Heu oblidat la vostra contrasenya?</string>
    <string name="obrirRegistre">Registrar-se</string>
    <string name="tensCompte">Tens un compte?</string>
    <string name="titulLogin">LOGIN</string>

    <!-- Contraseña -->
    <string name="introdueixContraseña">Introdueix el teu correu</string>
    <string name="recuperarContraseña">per recuperar la contrasenya</string>
    <string name="recuperarBtn">Recuperar</string>

    <!-- Registre -->
    <string name="titulRegistre">REGISTRE</string>
    <string name="edatEt">Edat</string>
    <string name="poblacioEt">Població</string>
    <string name="correoLogin">Entra el teu email</string>  <!-- Correo  -->
    <string name="passLogin">Entra la teva contrasenya</string> <!-- Contraseña -->
    <string name="BtnLogin">Iniciar sesión</string> <!-- Boton de entrada -->

    <!-- Menu -->
    <string name="TancarSessio">Tancar Sessió</string>
    <string name="miPuntuaciotxt">Puntuació</string>
    <string name="puntuacio"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo_"> -- </string>
    <string name="nom"> -- </string>
    <string name="edat"> -- </string>
    <string name="poblacio"> -- </string>
    <string name="canviarImatge">Canviar imatge</string>
    <string name="MenuTxt">MENÚ</string>
    <string name="jugarBtn">Jugar</string>
    <string name="PuntuacionsBtn">Puntuacions</string>
    <string name="CreditsBtn">Crèdits</string>
    <string name="UID">UID:</string>
    <string name="Email">Email:</string>
    <string name="Nom">Nom:</string>
    <string name="Edat">Edat:</string>
    <string name="Població">Població:</string>

    <!-- Nivells -->
    <string name="SeleccionaUnNivell">Selecciona un nivell</string>
    <string name="Nivell_uno">Nivell 1</string>
    <string name="Nivell_dos">Nivell 2</string>
    <string name="Nivell_tres">Nivell 3</string>

    <!-- strings PrimerNivell -->
    <string name="buttonRespuestaCorrecta">Respuesta correcta</string>
    <string name="puntuacioTxt">0</string>
    <string name="tiempoNivell1">0</string>
    <string name="nomUser"> -- </string>
    <string name="NivellActual"> -- </string>

    <!-- fi del joc -->
    <string name="fiDelJoc">Fi del joc</string>
    <string name="TotalDePuntuacio">Total de puntuació</string>
    <string name="NombrePuntacico"> -- </string>
    <string name="Seleccio_Nivells">Selecció del nivells</string>
    <string name="jugarDeNou">Menu</string>
    <string name="Puntatges">Puntuacions</string>

    <!-- Lista de jugadores -->
    <string name="nomJugador">Nom</string>
    <string name="puntacicoJugador">Puntatge</string>
    <string name="emailJugador">Email</string>
    <string name="edadJugador">Edad</string>
    <string name="poblacionJugador">Poblacion</string>


    <!--Game variables-->
    <string name="imgDesc">Pokémon image</string>
    <string name="btSortir">Sortir</string>
    <string name="pokeBt" />
    <string name="title_activity_summary_splash">SummarySplash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="nomDelsCreadors">Nasera y Yarií</string>
    <string name="dataFinal">Data de finalització: 10/04/2024</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="prefs_file">https://quizachu-default-rtdb.europe-west1.firebasedatabase.app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_credits">Credits</string>

</resources>