<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/miPuntuaciotxt"
            android:text="@string/miPuntuaciotxt"
            android:textSize="30sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/puntuacio"
            android:text="@string/puntuacio"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/alienimagen"
            android:layout_width="202dp"
            android:layout_height="214dp"
            android:src="@drawable/l" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uid"
            android:text="@string/uid"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correo"
            android:text="@string/correo"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nom"
            android:text="@string/nom"
            android:gravity="center"/>

        <Button
            android:id="@+id/jugarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jugarBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropio"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/PuntuacionsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PuntuacionsBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropio"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/CreditsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreditsBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropio"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/tancarSessio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TancarSessio"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropio"
            android:textColor="@color/black"
            />
    </LinearLayout>


</ScrollView>